--- a/src/styles/components/community-wall.scss
+++ b/src/styles/components/community-wall.scss
@@ -2,6 +2,10 @@
   display: flex;
   width: 844px;
   margin: 0 auto;
+  @include media-breakpoint-down(sm) {
+    flex-wrap: wrap;
+    width: 100%;
+  }
   &__intro {
     padding: 40px;
     .text-box__headline {
